// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mappingWizard actions should fetch source clusters and return PENDING and FULFILLED action 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_SOURCE_CLUSTERS_PENDING",
  },
  Object {
    "type": "FETCH_V2V_SOURCE_CLUSTERS_FULFILLED",
  },
]
`;

exports[`mappingWizard actions should fetch source clusters and return PENDING and REJECTED action 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_SOURCE_CLUSTERS_PENDING",
  },
  Object {
    "error": true,
    "payload": [Error: <mocked error>],
    "type": "FETCH_V2V_SOURCE_CLUSTERS_REJECTED",
  },
]
`;
